frontend/home/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-deployment
  labels:
    app: home
spec:
  replicas: 2
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      labels:
        app: home
    spec:
      containers:
        - name: home-container
          image: 891376951737.dkr.ecr.us-west-2.amazonaws.com/streamhive-home:5b9b8d82070ae69fe4f875958bab37cf97ffd1ea
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: home-service
spec:
  selector:
    app: home
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
